--- a/src/main/resources/templates/publica-index.html
+++ b/src/main/resources/templates/publica-index.html
@@ -4,7 +4,18 @@
 <meta charset="UTF-8">
 <title>Biblioteca</title>
 
+<link rel="stylesheet" th:href="@{/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css}">
+<script th:src="@{/jquery-3.6.3-dist/jquery-3.6.3.min.js}"></script>
+<script th:src="@{/bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js}"></script>
+
+
 </head>
 <body>
-	<h2 th:text="${msnBemVindo}"></h2>	
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<h2 th:text="${msnBemVindo}"></h2>
+			</div>
+		</div>
+	</div>	
 </body>
