--- a/src/main/resources/templates/fragments/publica-nav.html
+++ b/src/main/resources/templates/fragments/publica-nav.html
@@ -10,6 +10,7 @@
 <body>
 	<nav th:fragment="nav" class="navbar navbar-expand-xl navbar-dark bg-dark">
 		<div class="container">
+			<div class="row"></div>
 			<a class="navbar-brand" href="#"><h2>Logo</h2></a>
 
 			<button class="navbar-toggler" type="button"
@@ -22,9 +23,9 @@
 				id="navbarNav">
 				<ul class="navbar-nav fs-5 ">
 					<li class="nav-item "><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="/usuario/novo">Cadastrar</a></li>
 					<li class="nav-item"><a class="nav-link" href="/usuario/admin/listar">Usuários</a></li>
-					<li class="nav-item"><a class="nav-link" href="/revista/user/listar">Revistas</a></li>
-					<li class="nav-item"><a class="nav-link" href="/login">Entrar</a></li>
+					
 					<li class="nav-item active"> </li>
 				</ul>
 			</div>
