--- a/src/main/resources/templates/publica-index.html
+++ b/src/main/resources/templates/publica-index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+	<div th:insert="fragments/publica-nav :: nav"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -18,4 +19,5 @@
 			</div>
 		</div>
 	</div>	
+	<div th:insert="fragments/publica-nav :: foot"></div>
 </body>
